volver a subir formato de archivo

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
             </div>
             <div class="category-card">
-                <img src="img/cat-sustratos.png" alt="Sustratos">
+                <img src="img/cat-sustratos.PNG" alt="Sustratos">
                 <div class="category-card-content">
                     <p>Sustratos y Macetas</p>
                     <button class="buy-button">Ver Más</button>
